# cs59project

./: .gitignore  Application.hs  Import.hs  Model.hs  README.md  Utils.hs  app.hs  cs59project.cabal
Handler/: Signup.hs
app/: Main.hs
backend/: Application.hs  Foundation.hs  Model.hs  cs59project.cabal
backend/Handler/: Disp.hs  Login.hs  Ptweet.hs  Signup.hs
config/: models  routes
frontend/: README.md  package.json
frontend/src/: config.js  index.js
frontend/src/actions/: index.js
frontend/src/components/: Header.js  Login.js  MainScreen.js  Signup.js  Tweet_bar.js  Tweet_list.js  app.js
frontend/src/reducers/: index.js  reducer_tweets.js  reducer_user.js  tweetActions.js  tweetReducer.js  userActions.js  userReducer.js
frontend/style/: style.css
