name:                cs59project
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/cs59project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Application
                       Import
                       Model
                       Utils
                       Handler.Login
                       Handler.Signup
                       Handler.Disp
                       Handler.Ptweet
                       Foundation

  build-depends:       base >= 4.7 && < 5
                       , yesod                         >= 1.4.3      && < 1.5
                       , yesod-core                    >= 1.4.17     && < 1.5
                       , yesod-auth                    >= 1.4.0      && < 1.5
                       , yesod-static                  >= 1.4.0.3    && < 1.6
                       , yesod-form                    >= 1.4.0      && < 1.5
                       , http-types
                       , monad-logger
                       , text
                       , time
                       , random
                       , persistent-sqlite
                       , classy-prelude-yesod
                       , persistent
                       , persistent-template

  default-language:    Haskell2010


executable cs59project
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , cs59project
